Fix FAQ icon clipping on mobile

--- a/_sass/world/modules/_faq.scss
+++ b/_sass/world/modules/_faq.scss
@@ -61,6 +61,7 @@
             justify-content: space-between;
             align-items: center;
             flex-direction: row;
+            min-height: 2em;
 
             svg {
               flex: 0 0 auto;
